--- a/articles-html/v5/001-statistical-modeling.html
+++ b/articles-html/v5/001-statistical-modeling.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This issue was a collaboration with my wife, Jia Wu. Jia is an associate
 scientist at the Yale Child Study Center, where she spends a good portion of
