--- a/articles-html/v5/002-rocket-science-and-lod.html
+++ b/articles-html/v5/002-rocket-science-and-lod.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>The <a href="http://www.ccs.neu.edu/home/lieber/LoD.html">Law of Demeter</a> is a well-known 
 software design principle for reducing coupling between collaborating objects. 
 However, because the law exists in many forms, it often means different things 
@@ -601,9 +601,7 @@ remote control car around on a different planet. Knowing that, I decided
 to test Smyth’s ideas by building a very unrealistic Mars rover 
 simulation. The video below shows me interacting with it over IRC:</p>
 
-<div align="center">
-<iframe width="800" height="600" src="//www.youtube.com/embed/Yqofx6MbYFU?vq=480&amp;rel=0" frameborder="0" allowfullscreen=""></iframe>
-</div>
+https://www.youtube.com/watch?v=Yqofx6MbYFU
 
 <p>In the video, the communications delay is set at only a couple of seconds, but it
 can be set arbitrarily high, which makes it possible to simulate the full 14-
