--- a/articles-html/v5/006-service-quality.html
+++ b/articles-html/v5/006-service-quality.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>Software projects need to evolve over time, but they also need to avoid
 collapsing under their own weight. This balancing
 act is something that most programmers understand, but it is often 
