--- a/articles-html/v5/008-clojure.html
+++ b/articles-html/v5/008-clojure.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>An interesting thing about learning new programming languages is that it takes
 much less time to learn how to read programs than it does to write them. While
 building non-trivial software in a language you are not familiar with can take weeks
@@ -473,9 +473,8 @@ direct simulation of the natural behavior. After digging around for a bit, I
 found <a href="https://gist.github.com/1093917">Rich Hickey’s ant simulator</a>, which is implemented 
 in <a href="http://clojure.org/">Clojure</a>. Check out the video below to see what it looks like in action:</p>
 
-<div align="center">
-<iframe width="720" height="480" src="//www.youtube.com/embed/shm7QcJMvig?rel=0" frameborder="0" allowfullscreen=""></iframe>
-</div>
+https://www.youtube.com/watch?v=shm7QcJMvig
+
 
 <p>I knew right away that this was exactly the kind of simulation I wanted to
 build, but it honestly didn’t even cross my mind to attempt to read the Clojure
@@ -501,9 +500,7 @@ with a fresh perspective.</p>
 appear on my screen. The behavior was not perfect, but it illustrated the main 
 idea of the algorithm:</p>
 
-<div align="center">
-<iframe width="720" height="480" src="//www.youtube.com/embed/p_XmuRHs57g?rel=0" frameborder="0" allowfullscreen=""></iframe>
-</div>
+https://www.youtube.com/watch?v=p_XmuRHs57g
 
 <p>It was fairly easy to get to this point, but then it became extremely hard to 
 improve upon the simulator. Ant colony optimization has a lot of variables to it
