--- a/articles-html/v5/009-ants.html
+++ b/articles-html/v5/009-ants.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article is based on a <a href="https://github.com/elm-city-craftworks/practicing-ruby-examples/tree/master/v5/009">heavily modified Ruby port</a> 
 of Rich Hickey’s <a href="https://gist.github.com/1093917">Clojure ant simulator</a>. Although I didn’t directly collaborate with Rich on this issue of 
 Practicing Ruby, I learned a lot from his code and it provided
@@ -422,10 +422,8 @@ me with a great foundation to start from.</em></p>
 
 <p>Watch as a small ant colony identifies and completely consumes its four nearest
 food sources:</p>
+https://www.youtube.com/watch?v=f2IX1Y5o6pc
 
-<div align="center">
-<iframe width="720" height="480" src="//www.youtube.com/embed/f2IX1Y5o6pc?rel=0" frameborder="0" allowfullscreen=""></iframe>
-</div>
 
 <p>While this search effort may seem highly organized, it is the
 result of very simple decisions made by individual ants. On each
