--- a/articles-html/v5/010-prototypes.html
+++ b/articles-html/v5/010-prototypes.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was written by Avdi Grimm. Avdi is a <a href="http://rubyrogues.com/">Ruby Rogue</a>, a
 consulting pair programmer, and the head chef at <a href="http://devblog.avdi.org/rubytapas/">RubyTapas</a>. He writes
 about software development at <a href="http://devblog.avdi.org/">Virtuous Code.</a></em></p>
