--- a/articles-html/v5/README.html
+++ b/articles-html/v5/README.html
@@ -414,10 +414,26 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>The articles in this folder are from Practicing Ruby’s fifth volume, which ran from
 August 2012 to December 2012.</p>
-
+<ul>
+  <li><a href="./001-statistical-modeling.html">1</a></li>
+  <li><a href="./002-rocket-science-and-lod.html">2</a></li>  
+  <li><a href="./003-evented-io.html">3</a></li>
+  <li><a href="./004-service-apis.html">4</a></li>
+  <li><a href="./005-process-spawning-patterns.html">5</a></li>
+  <li><a href="./006-service-quality.html">6</a></li>
+  <li><a href="./007-dependencies-notifications-and-adjustments.html">7</a></li>
+  <li><a href="./008-clojure.html">8</a></li>
+  <li><a href="./009-ants.html">9</a></li>
+  <li><a href="./010-prototypes.html">10</a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+</ul>
 <p>You can also read them for free online at practicingruby.com.</p>
 
   </div>
