--- a/articles-html/v5/003-evented-io.html
+++ b/articles-html/v5/003-evented-io.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../.images/header.png" />
     <p><em>This issue of Practicing Ruby was contributed by Magnus Holm (<a href="http://twitter.com/judofyr">@judofyr</a>), 
 a Ruby programmer  from Norway. Magnus works on various open source 
 projects (including the <a href="https://github.com/camping">Camping</a> web framework),
