--- a/articles-html/v5/005-process-spawning-patterns.html
+++ b/articles-html/v5/005-process-spawning-patterns.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was contributed by <a href="http://jstorimer.com">Jesse Storimer</a>. He is
 the author of <a href="http://workingwithunixprocesses.com">Working with Unix Processes</a>
 and <a href="http://workingwithtcpsockets.com">Working with TCP Sockets</a>, a pair of
