--- a/articles-html/v6/001-parsing-json.html
+++ b/articles-html/v6/001-parsing-json.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was written by Aaron Patterson, a Ruby
 developer living in Seattle, WA.  He’s been having fun writing Ruby for the past
 7 years, and hopes to share his love of Ruby with you.</em></p>
