--- a/articles-html/v6/002-code-reading.html
+++ b/articles-html/v6/002-code-reading.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p><strong>NOTE:</strong> This issue of Practicing Ruby is one of several content experiments that was published in Volume 6. It intentionally breaks away from the traditional article format that we have developed over the years in the hopes of finding new and interesting ways for you to level up your programming skills.</p>
 </blockquote>
@@ -423,9 +423,7 @@
 
 <p>In this experiment, we will discover what happens when I drop you directly into a codebase to explore on your own. In particular, you’ll be working through understanding the implementation of <a href="https://github.com/elm-city-craftworks/weiqi">Weiqi</a>, the Go-playing desktop application shown in the following video:</p>
 
-<div align="center">
-<iframe width="720" height="480" src="//www.youtube.com/embed/5RZVfK1GdA8?rel=0" frameborder="0" allowfullscreen=""></iframe>
-</div>
+https://www.youtube.com/watch?v=5RZVfK1GdA8
 
 <p>Rather than attempting to rush off to a particular destination that I have planned for you in advance, I’d like you to try forging your own path and see where it takes you. Start with the project’s <a href="https://github.com/elm-city-craftworks/weiqi/blob/master/README.md">README</a> and then follow your interests from there.</p>
 
