--- a/articles-html/v6/003-actors.html
+++ b/articles-html/v6/003-actors.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This issue was a collaboration with <a href="https://github.com/afcapel">Alberto Fernández Capel</a>, a Ruby developer
 from Spain. Although it has been through many revisions since
