--- a/articles-html/v6/004-code-reuse.html
+++ b/articles-html/v6/004-code-reuse.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>% Code reuse in Ruby – It’s complicated 
 % Gregory Brown (practicingruby.com)
 % February 12, 2013</p>
