--- a/articles-html/v6/005-debugging.html
+++ b/articles-html/v6/005-debugging.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was contributed by Carol Nichols
 (<a href="http://twitter.com/carols10cents">@carols10cents</a>,
 <a href="https://rstat.us/users/Carols10cents">carols10cents@rstat.us</a>), one of the
