--- a/articles-html/v6/README.html
+++ b/articles-html/v6/README.html
@@ -414,10 +414,26 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>The articles in this folder are from Practicing Ruby’s sixth volume, which ran from
 January 2013 to May 2013.</p>
-
+<ul>
+  <li><a href="./001-parsing-json.html">1</a></li>
+  <li><a href="./002-code-reading.html">2</a></li>  
+  <li><a href="./003-actors.html">3</a></li>
+  <li><a href="./004-code-reuse.html">4</a></li>
+  <li><a href="./005-debugging.html">5</a></li>
+  <li><a href="./006-recipes-method-bloat.html">6</a></li>
+  <li><a href="./007-demeter.html">7</a></li>
+  <li><a href="./008-procedural-to-oop.html">8</a></li>
+  <li><a href="./009-isolate-responsibilities.html">9</a></li>
+  <li><a href="./010-concept-before-code.html">10</a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+</ul>
 <p>You can also read them for free online at practicingruby.com.</p>
 
   </div>
