--- a/articles-html/v6/007-demeter.html
+++ b/articles-html/v6/007-demeter.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was contributed by <a href="https://twitter.com/david_a_black">David A. Black</a>, Lead Developer at Cyrus Innovation. David is a long-time Ruby developer, author, trainer, 
 speaker, and community event organizer. He is the author of The Well-Grounded Rubyist (Manning Publications, 2009).</em> </p>
 
