--- a/articles-html/v6/009-isolate-responsibilities.html
+++ b/articles-html/v6/009-isolate-responsibilities.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p><strong>NOTE:</strong> This issue of Practicing Ruby was one of several content experiments 
 that was run in Volume 6. It uses a cookbook format (e.g. problem -&gt; solution -&gt; discussion)
