--- a/articles-html/v7/001-simulating-tiny-worlds.html
+++ b/articles-html/v7/001-simulating-tiny-worlds.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>As programmers we are very comfortable with the idea of using
 software to solve concrete problems. However, it is easy to
 underestimate the role that code can play in problem-solving itself, and that blindspot can hinder our creativity in a number of ways.</p>
