--- a/articles-html/v7/003-stats.html
+++ b/articles-html/v7/003-stats.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This issue was a collaboration with my wife, Jia Wu. Jia is an associate scientist at the Yale Child Study Center, where she spends a good portion of her time analyzing brainwave data from various EEG experiments. Although this article focuses on very basic concepts, her background in statistical programming was very helpful whenever I got stuck on something. That said, if you find any mistakes in this article, you can blame me, not her.</p>
 </blockquote>
