--- a/articles-html/v7/004-incremental.html
+++ b/articles-html/v7/004-incremental.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>When you look at this photograph of highway construction, what do you see?</p>
 
 <p><img src="http://i.imgur.com/eej11xZ.jpg" alt="" /></p>
