--- a/articles-html/v7/006-infrastructure.html
+++ b/articles-html/v7/006-infrastructure.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This issue of Practicing Ruby was a collaboration with Mathias Lafeldt
 (<a href="https://twitter.com/mlafeldt">@mlafeldt</a>), an Infrastructure
