--- a/articles-html/v7/007-wumpus.html
+++ b/articles-html/v7/007-wumpus.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><a href="http://en.wikipedia.org/wiki/Hunt_the_Wumpus">Hunt the Wumpus</a> is a hide-and-seek game that takes place in an underground
 cave network full of interconnected rooms. To win the game, the player
 needs to locate the evil Wumpus and kill it while avoiding various different 
