--- a/articles-html/v7/008-language-learning.html
+++ b/articles-html/v7/008-language-learning.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>[ ] Day 1 review
 [ ] Day 2 review
 [ ] Day 3 review
