--- a/articles-html/v7/008-oss-quality.html
+++ b/articles-html/v7/008-oss-quality.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This article was written in collaboration with Eric Hodel
 (<a href="http://twitter.com/drbrain">@drbrain</a>), a developer from Seattle. 
