--- a/articles-html/v7/009-course1.html
+++ b/articles-html/v7/009-course1.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>This self-guided course will help you learn how to work with the low level 
 tools that you’d usually rely on libraries and frameworks to provide. 
 Each of its four parts will give you a feel for a different kind 
