--- a/articles-html/v7/010-information.html
+++ b/articles-html/v7/010-information.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>Suppose that you want catch up with your friends 
 Alice, Bob, and Carol. To do this, you might log into your favorite
 chat service, join a group chat room, and then type in some
