--- a/articles-html/v7/README.html
+++ b/articles-html/v7/README.html
@@ -414,8 +414,25 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p>The articles in this folder are from Practicing Ruby’s 7th volume.
+<ul>
+  <li><a href="./001-simulating-tiny-worlds.html">1</a></li>
+  <li><a href="./002-http-server.html">2</a></li>  
+  <li><a href="./003-stats.html">3</a></li>
+  <li><a href="./004-incremental.html">4</a></li>
+  <li><a href="./005-low-level.html">5</a></li>
+  <li><a href="./006-infrastructure.html">6</a></li>
+  <li><a href="./007-wumpus.html">7</a></li>
+  <li><a href="./008-language-learning.html">8</a></li>
+  <li><a href="./008-oss-quality.html">9</a></li>
+  <li><a href="./009-course1.html">10</a></li>
+  <li><a href="./010-information.html">11</a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+  <li><a href="./"></a></li>
+</ul>
 You can also read them for free online at practicingruby.com.</p>
 
   </div>
