--- a/articles-html/v7/002-http-server.html
+++ b/articles-html/v7/002-http-server.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <p><em>This article was written by Luke Francl, a Ruby developer living in
 San Francisco. He is a developer at <a href="https://swiftype.com">Swiftype</a> where he
 works on everything from web crawling to answering support requests.</em></p>
