--- a/articles-html/v7/005-low-level.html
+++ b/articles-html/v7/005-low-level.html
@@ -414,7 +414,7 @@
 <body>
   <div id="containter">
     <h1 class="logo">Practicing Ruby</h1>
-    <img class="logo" src="../../assets/images/header.png" />
+    <img class="logo" src="../images/header.png" />
     <blockquote>
   <p>This issue of Practicing Ruby was directly inspired by Nick Morgan’s
 <a href="http://skilldrick.github.io/easy6502/">Easy 6502</a> tutorial. While
